--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/earcut": "^2.1.1",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
@@ -18,6 +19,7 @@
   "dependencies": {
     "@babylonjs/core": "^6.19.1",
     "@babylonjs/gui": "^6.20.0",
-    "@babylonjs/loaders": "^6.19.1"
+    "@babylonjs/loaders": "^6.19.1",
+    "earcut": "^2.2.4"
   }
 }
